# elf_viewer

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  conanfile.txt  vcpkg.json
cmake/: applicationInfo.cmake  conanSetup.cmake  projectVersionDetails.cmake  versionInfo.cmake
src/: ApplicationInfo.cpp.in  ApplicationInfo.h  ProgramArgs.cpp  ProgramArgs.h  VersionInfo.cpp.in  VersionInfo.h  main.cpp
